--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -71,12 +71,12 @@ jobs:
             echo "Bucket validado. Processo de upload."
           fi
 
-      - name: Upload to S3
+      - name: Upload para S3
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           BUCKET_NAME="controle-armazem-code-bucket"
           aws s3api head-bucket --bucket "$BUCKET_NAME" || aws s3api create-bucket --bucket "$BUCKET_NAME"
-          aws s3 cp lambda_api_function.zip s3://$BUCKET_NAME/
+          aws s3 cp controle_armazem_code.zip s3://$BUCKET_NAME/
 
   CreateLambda: 
     needs: 'Publish'
